[project]
name = "fine-tuning-llms"
version = "0.1.0"
description = ""
authors = [
    {name = "exiler",email = "skoay087@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.general.dependencies]
black = "^25.1.0"
ipynb = "^0.5.1"


[tool.poetry.group.ui.dependencies]
streamlit = "^1.42.2"


[tool.poetry.group.dev.dependencies]
torch = "^2.6.0"
huggingface = "^0.0.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
plotly = "^6.0.0"
bitsandbytes = "^0.45.2"
pert = "^2019.11"

